# mcp-server-starter

./: Makefile  README.md  pyproject.toml
src/mcp_starter/: __init__.py  models.py  protocol.py  registry.py  server.py  validation.py
tests/: test_models.py  test_protocol.py  test_registry.py  test_server.py  test_validation.py
